# tardisatomic

./: README.md  setup.cfg  setup.py
debug/: basic_env.py
docs/: conf.py  index.rst  running.rst
docs/atomicdata/: atomic_data_description.rst  index.rst  macroatom.rst
scripts/: README.rst  add_bound-free_cx.py  insert_chianti2kurucz  insert_topbase2kurucz.py  make_atom_data_basic  make_hdf5  make_hdf_from_db.py  make_kurucz_atom  make_kurucz_db  make_kurucz_hdf5  read_gfall2db
tardisatomic/: __init__.py  base.py  basic_io.py  conftest.py  construct_atom_db.py  fileio.py  import_chianti.py  import_ionDB.py  import_topbase.py  macro_atom_transition.py  make_kurucz_atoms.py  publish_atomic_db.py  radiative_rates.py  sql_stmts.py  test_to_hdf.py  util.py
tardisatomic/alchemy/: __init__.py  base.py
tardisatomic/alchemy/ingest/: __init__.py  base.py  kurucz.py  nist.py
tardisatomic/alchemy/to_hd5/: __init__.py  createhd5.py
tardisatomic/data/: atom_data_basic.h5  basic_atomic_data.csv  basic_atomic_data.tsv  gfall.db3.schema
tardisatomic/kurucz/: alchemy.py  io.py
tardisatomic/kurucz/io/: __init__.py  gfall.py
tardisatomic/nist/io/: __init__.py  ionization.py
tardisatomic/test/: test_macroatom.py
tardisatomic/tests/: test_createhd5.py  test_macroatom.py
