[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = tardisatomic
description = TARDIS Atomic - a package to compile atomic data for TARDIS
long_description = A package to generate Atomic data HDF5 files from diverse atomic sources
author = TARDIS collaboration
author_email = NA
license = BSD
url = github.com/wkerzendorf/tardisatomic
edit_on_github = False
github_project = wkerzendorf/tardisatomic
